--- a/Math-Ba-OPTINUM/OPTINUM_2_Vorlesung/skript-numerik-sander.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_2_Vorlesung/skript-numerik-sander.tex
@@ -1,6 +1,6 @@
 \documentclass[german]{scrreprt}
 
-\usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=4cm]{geometry}
+\usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -283,8 +283,16 @@
 %\includeonly{numerische-quadratur}
 
 \usepackage{todonotes}
-\newcommand{\note}[2][]
-{\todo[color=cdblue!10, #1]{#2}}
+%\newcommand{\note}[2][]
+%{\todo[color=cdblue!10, #1]{#2}}
+
+\usepackage{marginnote}
+\renewcommand*{\marginfont}{\tiny\osfamily}
+\newcommand{\note}[1]{\marginnote{\colorbox{cdblue!20}{\parbox{1cm}{#1}}}}
+
+\usepackage{showframe}
+
+
 \begin{document}
 
 %\frontmatter
