--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -437,5 +437,6 @@ nobreak,%
 \include{pde-uebungen-9}
 \include{pde-uebungen-10}
 \include{pde-uebungen-11}
+\include{pde-uebungen-12}
 
 \end{document}
