STOCHV-FiMa: Fehlerkorrektur Teil 1

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_2_mathematischesFinanzmodell.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_2_mathematischesFinanzmodell.tex
@@ -74,7 +74,7 @@ Wir betrachten
 	Ein Finanzmarktmodell (FFM) mit Zeitachse $I$ ist gegeben durch
 	\begin{enumerate}[nolistsep, topsep=-\parskip]
 		\item einen Wahrscheinlichkeitsraum $(\Omega, \F, \P)$ mit Filtration $\folge{\F_t}{t \in I}$
-		\item einem an $\folge{\F_t}{t \in I}$ adaptierten, $\R^{d+1}$-wertigen stiochastischen Prozess $S_t = (S_t^0, S_t^1 , \dots , S_t^d)$ mit $t \in I$.
+		\item einem an $\folge{\F_t}{t \in I}$ adaptierten, $\R^{d+1}$-wertigen stochastischen Prozess $S_t = (S_t^0, S_t^1 , \dots , S_t^d)$ mit $t \in I$.
 	\end{enumerate}
 \end{definition}
 \begin{beispiel}[Cox-Ross-Rubinstein-Modell]
