--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_1_anlagestrategien.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_1_anlagestrategien.tex
@@ -21,26 +21,50 @@ Annahmen an die Strategie:
 \begin{itemize}
 	\item Die Strategie darf nur von Beobachtungen der Vergangenheit abhängen, d.h. $(\eta_n, \xi_n)$ ist ein \textit{vorhersehbarer} Prozess.
 	\item Portfolio wird nur zwischen $S$ und $S_0$ umgeschichtet, d.h. es wird kein Kapital zugeschossen oder abgezogen:
-%	
-%	$\Pi_n = \eta_n S_n^0 + \xi_n S_n$ Wert zum Zeitpuntk $n$ vor dem Umschichten
-%	$\Pi_n = \eta_{n+1} S_n^0 + \xi_{n+1}S_n$ Wert zum Zeitpunkt $n$ nach dem Umschichten
-%	$\Pi_{n+1} = \eta_{n+1} S_{n+1}^0 + \xi_{n+1} S_{n+1}$ Wert zum Zeitpunkt $n+1$ vor dem Umschichten.
-%	Subtrahiere Gleichung 2 und 3
-%	$\follows \Pi_{n+1} - \Pi_n = \eta_{n+1} \brackets{S_{n+1}^0 - S_n^0} + \xi_{n+1} \brackets{S_{n+1} - S_n}$
-%	kurz: $\Delta \Pi_n = \eta_n \Delta S_n^0 + \xi_m \Delta S_n$ (Selbstfinanzierungseigenschaft, SF)
-%	beachte: $\Delta \Pi_n \defeq \Pi_n - \Pi_{n-1}$
-%	
-%	Diskontieren: $\schlange{\Pi_n} = \frac{\Pi_n}{S_n^0}$ ... diskontierter Portfoliogleichung
-%	Wier erhalten aus (Port)
-%	$\schlange{\Pi_n} = \eta_n + \xi_n \schlange{S}_n$
-%	$\schlange{\Pi_0} = w$ (Port schlange)
-%	
-%	Aus (SF)
-%	$\Delta \schlange{\Pi_n} = \xi_n \Delta \schlange{S}_n$ (SF Schlange)	
-%	
-%	d.h. $\schlange{\Pi}_n  = w + \sum_{k=1}^n \brackets{\schlange\Pi_k - \schlange\Pi_{k-1} \overset{(SF)}{=} w + \sum_{k=1}^n \xi_k \brackets{\schlange S_k - \schlange S_{k-1}} = w + \brackets{\xi \bullet \schlange{S}}_n$
-%		
-%	$\schlange\Pi_n = w + \brackets{\xi \bullet \schlange{S}}_n$ (INt Schlange)
+	
+	\item $\Pi_n = \eta_n S_n^0 + \xi_n S_n$ Wert zum Zeitpunkt $n$ vor dem Umschichten
+	\item $\Pi_n = \eta_{n+1} S_n^0 + \xi_{n+1}S_n$ Wert zum Zeitpunkt $n$ nach dem Umschichten
+	\item $\Pi_{n+1} = \eta_{n+1} S_{n+1}^0 + \xi_{n+1} S_{n+1}$ Wert zum Zeitpunkt $n+1$ vor dem Umschichten.
+	
+	\item Subtrahiere Gleichung 2 und 3: 
+	\begin{equation}
+		\begin{aligned}
+			\follows \Pi_{n+1} - \Pi_n &= \eta_{n+1} \brackets{S_{n+1}^0 - S_n^0} + \xi_{n+1} \brackets{S_{n+1} - S_n} \\
+			\text{kurz: } \Delta \Pi_n &= \eta_n \Delta S_n^0 + \xi_m \Delta S_n
+		\end{aligned}
+		\tag{SF} \label{eq: sf}
+	\end{equation}
+	Wir bezeichnen \eqref{eq: sf} als \begriff{Selbstfinanzierungseigenschaft}. Beachte: $\Delta \Pi_n \defeq \Pi_n - \Pi_{n-1}$
+	
+	Diskontieren:
+	\begin{equation}
+		\schlange{\Pi}_n = \frac{\Pi_n}{S_n^0} 
+		\tag{diskontierte Portfoliogleichung}
+	\end{equation}
+	Wir erhalten aus \eqref{eq: port}
+	\begin{equation}
+		\begin{aligned}
+		\schlange{\Pi}_n &= \eta_n + \xi_n \schlange{S}_n
+		\schlange{\Pi}_0 &= w
+		\end{aligned}
+		\tag{$\schlange{\text{Port}}$}
+	\end{equation}
+	
+	Aus \eqref{eq: sf} erhalten wir
+	\begin{equation}
+		\Delta \schlange{\Pi}_n = \xi_n \Delta \schlange{S}_n
+		\tag{$\schlange{\text{SF}}$}
+	\end{equation}
+	d.h.
+	\begin{equation}
+		\begin{aligned}
+			\schlange{\Pi}_n  &= w + \sum_{k=1}^n \brackets{\schlange\Pi_k - \schlange\Pi_{k-1} }
+			\overset{\eqref{eq: sf}}{=} w + \sum_{k=1}^n \xi_k \brackets{\schlange S_k - \schlange S_{k-1}} 
+			= w + \brackets{\xi \bullet \schlange{S}}_n \\
+			\schlange\Pi_n &= w + \brackets{\xi \bullet \schlange{S}}_n
+		\end{aligned}
+		\tag{$\schlange{\text{Int}}$}
+	\end{equation}
 \end{itemize}
 
 \begin{lemma} %2.2
@@ -57,5 +81,5 @@ Annahmen an die Strategie:
 	\end{enumerate}
 \end{lemma}
 \begin{proof}
-	sie Herleitung oben
+	siehe Herleitung oben
 \end{proof}
